# yggdrasil

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  static.yml
docs/: ARCHITECTURE.md
src/yggdrasil/: __init__.py  __main__.py  cli.py  config.py  core.py  graph.py  memory.py
tests/: test_core.py  test_graph.py  test_memory.py
